# SEWAA-forecasts

./: .dockerignore  .gitignore  Dockerfile  README.md  file_paths.py  main.py  pyproject.toml  run_forecast.py  start_forecasting.py
24h_accumulations/: IFS_to_ICPAC_region.py  download_7d.py  find_available_dates.py  forecast2histogram_7d.py  forecast2histogram_7d_lowRAM.py  seven_day_script.py
24h_accumulations/cGAN/: FCSTNorm2018.pkl
24h_accumulations/cGAN/dsrnngan/: config.yaml  data.py  data_generator.py  data_paths.yaml  forecast.yaml  forecast_date.py  local_config.yaml  main.py  predict.py  setupdata.py  tfrecords_generator.py
6h_accumulations/: IFS_to_ICPAC_region.py  download_sixHourly.py  find_available_dates.py  forecast2histogram.py  forecast2histogram_lowRAM.py  sixHourly_script.py
6h_accumulations/cGAN/dsrnngan/: forecast.yaml  forecast_date.py
ELR/: file_paths.py  helper_functions.py  plot_ELR.py  run_ELR.py
ELR_predictions/: plot_predictions.ipynb
ELR_predictions/Kenya/county/: GAN_Kiambu_20240423_logreg.nc
ELR_predictions/Kenya/subcounty/: GAN_Kajiado-East_20240423_logreg.nc
interface/: categoriesOfReliability.html  costLossRatios.html  ensemble_logistic_regression.html  index.html  showForecasts.html
interface/data/counts_24h/: available_dates.json
interface/data/counts_6h/: available_dates.json
interface/ensemble_logistic_regression/Shapes/: Konso_boundary.json  Moyale_boundary.json
interface/ensemble_logistic_regression/html/: ensemble_logistic_regression.html
interface/static/js/: testScript.js  (+3 more)
shapes/: ExtractJSON.ipynb
(+206 files in other folders)
